Move parsing to VersionRange
- change contains to matches (set of string versions)
- add special "ranges" (e.g. move "current" from node_selector)